added import of databases for paper 1

--- a/create_consumption_database_paper.ipynb
+++ b/create_consumption_database_paper.ipynb
@@ -8,7 +8,8 @@
     "> - #### Parts 1 and 2 can be run separately\n",
     "> - #### Raw data: Excel sheet can be obtained from https://doi.org/10.1021/acs.est.8b01452\n",
     "> - #### Terms `exchange` and `input activity` are used interchangeably\n",
-    "> - #### At the moment, only works if ecoinvent 3.3 was also imported as reference product is taken from there"
+    "> - #### Only take ecoinvent inventories for the paper\n",
+    "> - #### Demand would be one of the sectors in the "
    ]
   },
   {
@@ -26,13 +27,72 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from copy import copy\n",
+    "from copy import copy, deepcopy\n",
     "import os, json\n",
     "import re\n",
     "import brightway2 as bw\n",
     "\n",
     "# Local files\n",
     "from utils_consumption_db import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert data to brightway database format -> Additional functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_ecoinvent_exchange(df, df_ind_j, ConversionDem2FU):\n",
+    "    '''\n",
+    "    Extract information about one input activity, eg name, unit, location, etc and append it to the dataframe df.\n",
+    "    '''    \n",
+    "    # Extract the activity number\n",
+    "    k = int(''.join(c for c in df_ind_j.index[0] if c.isdigit()))\n",
+    "    # Extract information about activity and save it\n",
+    "    input_act_str = df_ind_j['DB Act ' + str(k)]\n",
+    "    input_act_db_code = df_ind_j['Activity ' + str(k)]\n",
+    "    \n",
+    "    # Find this input activity in brightway databases\n",
+    "    db_name = input_act_db_code.split(\"'\")[1]\n",
+    "    \n",
+    "    # Only include ecoinvent exchanges\n",
+    "    dbs_no_list = ['agribalyse', 'exiobase', 'heia']\n",
+    "    for db_no in dbs_no_list:\n",
+    "        if db_no in db_name.lower():\n",
+    "            return df\n",
+    "        \n",
+    "    code = input_act_db_code.split(\"'\")[3]\n",
+    "    input_act_db_code_tuple = (db_name, code)\n",
+    "    \n",
+    "    # Compute amount\n",
+    "    input_act_amount = df_ind_j['On ' + str(k)] \\\n",
+    "                     * df_ind_j['Amount Act ' + str(k)] \\\n",
+    "                     * df_ind_j['CFL Act ' + str(k)] \\\n",
+    "                     * ConversionDem2FU\n",
+    "    \n",
+    "    try:\n",
+    "        # Find activity in the ecoinvent 3.3 cutoff using bw functionality\n",
+    "        current_project = deepcopy(bw.projects.current)\n",
+    "        bw.projects.set_current('ecoinvent 3.3 cutoff') # Temporarily switch to ecoinvent 3.3 project\n",
+    "        act_bw = bw.get_activity(input_act_db_code_tuple)\n",
+    "        bw.projects.set_current(current_project)\n",
+    "        input_act_values_dict = create_input_act_dict(act_bw, input_act_amount)\n",
+    "        \n",
+    "    except:\n",
+    "        # If bw.get_activity does not work for whichever reason, fill info manually\n",
+    "        input_act_values_dict = bw_get_activity_info_manually(input_act_str, db_name, input_act_amount)\n",
+    "        \n",
+    "    # Add exchange to the dataframe with database in brightway format\n",
+    "    df = append_exchanges_in_correct_columns(df, input_act_values_dict)\n",
+    "    \n",
+    "    return df"
    ]
   },
   {
@@ -71,8 +131,10 @@
     "    \n",
     "# 1. Create project with ecoinvent 3.3 cutoff only. \n",
     "# This is needed because Andi's activities were given as ecoinvent 3.3 cutoff codes\n",
-    "# create_ecoinvent_33_project(ei33_path)\n",
-    "project = 'GSA for ecoinvent'\n",
+    "create_ecoinvent_33_project(ei33_path)\n",
+    "\n",
+    "# Start brightway project that already contains databases\n",
+    "project = 'GSA for paper'\n",
     "bw.projects.set_current(project)\n",
     "\n",
     "# Create dataframe that will be our consumption database after we add activities and exchanges from the raw file\n",
@@ -84,10 +146,6 @@
     "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)\n",
     "\n",
     "# Read data from HABE\n",
-    "if which_pc == 'local':\n",
-    "    path_habe = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
-    "elif which_pc == 'merlin':\n",
-    "    path_habe = '/data/user/kim_a/LCA_files/HABE_2017'\n",
     "year = '091011' #121314 or 151617\n",
     "code_unit = get_units_habe(path_habe, year)\n",
     "\n",
@@ -96,14 +154,17 @@
     "\n",
     "act_indices = df_raw.index[df_raw['ConversionDem2FU'].notna()].tolist() # indices of all activities\n",
     "\n",
+    "sector_codes = ['a51', 'a52'] # Food and non-alcoholic beverages\n",
     "for ind in act_indices:\n",
     "    # For each row\n",
     "    df_ind = df_raw.iloc[ind]\n",
     "    df_ind = df_ind[df_ind.notna()]\n",
-    "    # Add activity\n",
-    "    df_bw, df_act = append_activity(df_bw, df_ind[:N_ACT_RELEVANT], code_unit) # only pass columns relevant to this function \n",
-    "    # Add exchanges\n",
-    "    df_bw = append_exchanges(df_bw, df_ind, df_act)"
+    "    \n",
+    "    if df_ind['Variable code'][:3] in sector_codes:\n",
+    "        # Add activity\n",
+    "        df_bw, df_act = append_activity(df_bw, df_ind[:N_ACT_RELEVANT], code_unit) # only pass columns relevant to this function\n",
+    "        # Add exchanges\n",
+    "        df_bw = append_exchanges(df_bw, df_ind, df_act, append_one_exchange=append_ecoinvent_exchange)"
    ]
   },
   {
@@ -116,7 +177,7 @@
     "write_dir_name = 'write_files'\n",
     "if not os.path.exists(write_dir_name):\n",
     "    os.mkdir(write_dir_name)\n",
-    "db_bw_path = write_dir_name + '/' + 'consumption_db.xlsx'\n",
+    "db_bw_path = write_dir_name + '/' + 'consumption_db_paper.xlsx'\n",
     "df_bw.to_excel(db_bw_path, index=False, header=False)"
    ]
   },
@@ -145,23 +206,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_COLUMN = 'F'\n",
+    "CONSUMPTION_DB_NAME = 'CH consumption 1.0'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replace names of old databases with the new ones in the consumption database excel file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_all_db(df):\n",
+    "    '''\n",
+    "    Update all databases in the consumption database\n",
+    "    '''\n",
+    "    db_old_list = ['ecoinvent 3.3 cutoff']\n",
+    "    db_new_list = ['ecoinvent 3.6 cutoff']\n",
+    "    \n",
+    "    assert len(db_old_list) == len(db_new_list)\n",
+    "    \n",
+    "    for i in range(len(db_old_list)):\n",
+    "        df = replace_one_db(df, db_old_list[i], db_new_list[i])\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Main code\n",
-    "project = 'GSA for ecoinvent'\n",
+    "project = 'GSA for paper'\n",
     "bw.projects.set_current(project)\n",
     "\n",
     "# Read consumption database\n",
-    "path = 'write_files/consumption_db.xlsx'\n",
+    "path = 'write_files/consumption_db_paper.xlsx'\n",
     "df = pd.read_excel(path, header = None)\n",
     "df.columns = list(string.ascii_uppercase[:len(df.columns)])\n",
     "# \n",
     "# Replace\n",
     "df = update_all_db(df)\n",
-    "path_new_db = 'write_files/consumption_db_updated.xlsx'\n",
+    "path_new_db = 'write_files/consumption_db_paper_updated.xlsx'\n",
     "df.to_excel(path_new_db, index=False, header=False)"
    ]
   },
@@ -206,9 +312,8 @@
    "source": [
     "co = bw.ExcelImporter(path_new_db)\n",
     "co.apply_strategies()\n",
-    "co.match_database('EXIOBASE 2.2', fields=('name','reference product', 'unit','location','categories'))\n",
     "co.match_database('ecoinvent 3.6 cutoff', fields=('name', 'reference product', 'unit','location','categories'))\n",
-    "co.match_database('Agribalyse 1.3 - ecoinvent 3.6 cutoff', fields=('name','unit','location'))\n",
+    "co.match_database('ecoinvent 3.6 cutoff', fields=('name', 'unit','location','categories'))\n",
     "co.statistics()"
    ]
   },
@@ -410,33 +515,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.projects.set_current('GSA for ecoinvent')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.databases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "co = bw.Database('CH consumption 1.0')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,6 +526,17 @@
    "metadata": {},
    "source": [
     "## 1. Extract total demand from HABE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('global_settings.json', 'rb') as f:\n",
+    "    settings = json.load(f)\n",
+    "which_pc = settings['which_pc']"
    ]
   },
   {
@@ -474,7 +563,8 @@
    "outputs": [],
    "source": [
     "# change codes to be consistent with consumption database and Andi's codes\n",
-    "bw.projects.set_current('GSA for ecoinvent')\n",
+    "project = 'GSA for paper'\n",
+    "bw.projects.set_current(project)\n",
     "co = bw.Database('CH consumption 1.0')\n",
     "\n",
     "ausgaben = pd.read_csv(path_ausgaben, sep='\\t')\n",
@@ -538,15 +628,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_consumption['a5220']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -607,10 +688,15 @@
    "outputs": [],
    "source": [
     "# Add total inputs from Andi's model as swiss consumption activity\n",
-    "try: co.get('ch hh all consumption').delete()\n",
+    "try: co.get('ch hh food consumption').delete()\n",
     "except: pass\n",
-    "consumption_all = co.new_activity('ch hh all consumption', name='ch hh all consumption', location='CH', unit='1 month of consumption')\n",
-    "consumption_all.save()"
+    "consumption_food = co.new_activity(\n",
+    "    'ch hh food consumption', \n",
+    "    name='ch hh food consumption', \n",
+    "    location='CH', \n",
+    "    unit='1 month of consumption'\n",
+    ")\n",
+    "consumption_food.save()"
    ]
   },
   {
@@ -620,9 +706,11 @@
    "outputs": [],
    "source": [
     "# Add production exchange for the activity `consumption`\n",
-    "consumption_all.new_exchange(input = (consumption_all['database'], consumption_all['code']),\n",
-    "                         amount = 1,\n",
-    "                         type = 'production').save()"
+    "consumption_food.new_exchange(\n",
+    "    input = (consumption_food['database'], consumption_food['code']),\n",
+    "    amount = 1,\n",
+    "    type = 'production'\n",
+    ").save()"
    ]
   },
   {
@@ -639,9 +727,11 @@
     "for i in range(len(df)):\n",
     "    code = df.loc[i]['code']\n",
     "    if code in codes:\n",
-    "        consumption_all.new_exchange(input  = (co.name, code), \n",
-    "                                     amount = df.loc[i]['amount'], # TODO?? divide by number of months\n",
-    "                                     type   = 'technosphere').save()\n",
+    "        consumption_food.new_exchange(\n",
+    "            input  = (co.name, code), \n",
+    "            amount = df.loc[i]['amount'], # TODO?? divide by number of months\n",
+    "            type   = 'technosphere'\n",
+    "        ).save()\n",
     "    else:\n",
     "        unlinked_codes.append(code)"
    ]
@@ -652,7 +742,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(consumption_all.exchanges()) # per month for all households"
+    "# list(consumption_food.exchanges()) # per month for all households"
    ]
   },
   {
@@ -661,8 +751,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(list(consumption_all.exchanges()))"
+    "len(list(consumption_food.exchanges()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -684,9 +781,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try: co.get('ch hh average consumption').delete()\n",
+    "try: co.get('ch hh average food consumption').delete()\n",
     "except: pass\n",
-    "consumption_average = consumption_all.copy('ch hh average consumption', name='ch hh average consumption')"
+    "consumption_average = consumption_food.copy(\n",
+    "    'ch hh average food consumption', \n",
+    "    name='ch hh average food consumption'\n",
+    ")"
    ]
   },
   {
@@ -732,15 +832,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('GSA for ecoinvent')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bw.projects.set_current('GSA for paper')\n",
     "co = bw.Database('CH consumption 1.0')"
    ]
   },
@@ -781,35 +873,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another exchange"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "food = co.search('Ready-made foods')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "lca = bw.LCA({food: 1}, method)\n",
-    "lca.lci()\n",
-    "lca.lcia()\n",
-    "print(str(lca.score) + ' ' + bw.Method(method).metadata['unit'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# ------------------------------------------ Part 4 ------------------------------------------"
    ]
   },
@@ -838,7 +901,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('GSA for ecoinvent')"
+    "bw.projects.set_current('GSA for paper')"
    ]
   },
   {
@@ -861,15 +924,6 @@
     "categories_col_de = 'Original name in Swiss household budget survey'\n",
     "categories_col_en = 'Translated name'\n",
     "categories_raw = df_raw[[categories_col_de, categories_col_en]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categories_raw.values"
    ]
   },
   {
@@ -933,7 +987,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(co)"
+   ]
   },
   {
    "cell_type": "markdown",
