--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -36,6 +36,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw.projects.set_current('GSA for ecoinvent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw.databases"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +135,7 @@
     "if not os.path.exists(write_dir_name):\n",
     "    os.mkdir(write_dir_name)\n",
     "db_bw_path = write_dir_name + '/' + 'consumption_db.xlsx'\n",
-    "df_bw.to_excel(db_bw_path, index=False, header=False)"
+    "# df_bw.to_excel(db_bw_path, index=False, header=False)"
    ]
   },
   {
@@ -1218,9 +1236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bw]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bw-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1232,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   },
   "varInspector": {
    "cols": {
