--- a/import_all_databases_paper.ipynb
+++ b/import_all_databases_paper.ipynb
@@ -12,7 +12,8 @@
     "from copy import copy\n",
     "\n",
     "#Local files\n",
-    "import json, os"
+    "import json, os\n",
+    "import pickle"
    ]
   },
   {
@@ -43,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "project = 'GSA for paper'\n",
@@ -144,13 +147,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bw]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bw-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -162,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   },
   "varInspector": {
    "cols": {
