reimported all databases locally, ecoinvent 3.3 is not included anymore

--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -36,24 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.projects.set_current('GSA for ecoinvent')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.databases"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,7 +71,9 @@
     "    \n",
     "# 1. Create project with ecoinvent 3.3 cutoff only. \n",
     "# This is needed because Andi's activities were given as ecoinvent 3.3 cutoff codes\n",
-    "# create_ecoinvent_33_project(ei33_path)\n",
+    "create_ecoinvent_33_project(ei33_path)\n",
+    "\n",
+    "# Start brightway project that already contains databases\n",
     "project = 'GSA for ecoinvent'\n",
     "bw.projects.set_current(project)\n",
     "\n",
@@ -102,10 +86,6 @@
     "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)\n",
     "\n",
     "# Read data from HABE\n",
-    "if which_pc == 'local':\n",
-    "    path_habe = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
-    "elif which_pc == 'merlin':\n",
-    "    path_habe = '/data/user/kim_a/LCA_files/HABE_2017'\n",
     "year = '091011' #121314 or 151617\n",
     "code_unit = get_units_habe(path_habe, year)\n",
     "\n",
@@ -121,7 +101,7 @@
     "    # Add activity\n",
     "    df_bw, df_act = append_activity(df_bw, df_ind[:N_ACT_RELEVANT], code_unit) # only pass columns relevant to this function \n",
     "    # Add exchanges\n",
-    "    df_bw = append_exchanges(df_bw, df_ind, df_act)"
+    "    df_bw = append_exchanges(df_bw, df_ind, df_act, append_one_exchange=append_ecoinvent_exchange)"
    ]
   },
   {
@@ -135,7 +115,7 @@
     "if not os.path.exists(write_dir_name):\n",
     "    os.mkdir(write_dir_name)\n",
     "db_bw_path = write_dir_name + '/' + 'consumption_db.xlsx'\n",
-    "# df_bw.to_excel(db_bw_path, index=False, header=False)"
+    "df_bw.to_excel(db_bw_path, index=False, header=False)"
    ]
   },
   {
@@ -1236,9 +1216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bw]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-bw-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1250,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   },
   "varInspector": {
    "cols": {
