--- a/import_all_databases_paper.ipynb
+++ b/import_all_databases_paper.ipynb
@@ -165,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bw]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-bw-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   },
   "varInspector": {
    "cols": {
