--- a/create_consumption_database_paper.ipynb
+++ b/create_consumption_database_paper.ipynb
@@ -963,7 +963,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('GSA for ecoinvent')"
+    "bw.projects.set_current('GSA for paper')"
    ]
   },
   {
