fixed consumption db import

--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -101,7 +101,7 @@
     "    # Add activity\n",
     "    df_bw, df_act = append_activity(df_bw, df_ind[:N_ACT_RELEVANT], code_unit) # only pass columns relevant to this function \n",
     "    # Add exchanges\n",
-    "    df_bw = append_exchanges(df_bw, df_ind, df_act, append_one_exchange=append_ecoinvent_exchange)"
+    "    df_bw = append_exchanges(df_bw, df_ind, df_act)"
    ]
   },
   {
