--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -1216,9 +1216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bw]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bw-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1230,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "varInspector": {
    "cols": {
