--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -950,9 +950,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bw]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bw-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -964,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "varInspector": {
    "cols": {
