added import of databases to reproduce Andi's results

--- a/contribution_analysis.ipynb
+++ b/contribution_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('GSA for paper')\n",
+    "bw.projects.set_current('exiobase_reproduce_results')\n",
     "co = bw.Database('CH consumption 1.0')\n",
-    "average_consump = co.search('average consumption')[0]"
+    "average_consump = co.search('ch hh average consumption')[0]\n",
+    "# average_consump = co.search('food')[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sectors = [act for act in co if 'sector' in act[\"name\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alcoholic beverages and tobacco sector' (1 month of consumption, CH, None),\n",
+       " 'Clothing and footwear sector' (1 month of consumption, CH, None),\n",
+       " 'Communication sector' (1 month of consumption, CH, None),\n",
+       " 'Durable goods sector' (1 month of consumption, CH, None),\n",
+       " 'Education sector' (1 month of consumption, CH, None),\n",
+       " 'Fees sector' (1 month of consumption, CH, None),\n",
+       " 'Food and non-alcoholic beverages sector' (1 month of consumption, CH, None),\n",
+       " 'Furnishings, household equipment and routine household maintenance sector' (1 month of consumption, CH, None),\n",
+       " 'Health sector' (1 month of consumption, CH, None),\n",
+       " 'Housing, water, electricity, gas and other fuels sector' (1 month of consumption, CH, None),\n",
+       " 'Miscellaneous goods and services sector' (1 month of consumption, CH, None),\n",
+       " 'Other insurance premiums sector' (1 month of consumption, CH, None),\n",
+       " 'Premiums for life insurance sector' (1 month of consumption, CH, None),\n",
+       " 'Recreation and culture sector' (1 month of consumption, CH, None),\n",
+       " 'Restaurants and hotels sector' (1 month of consumption, CH, None),\n",
+       " 'Transport sector' (1 month of consumption, CH, None),\n",
+       " 'ch hh all consumption' (1 month of consumption, CH, None),\n",
+       " 'ch hh average consumption' (1 month of consumption, CH, None)}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([act for act in co if act.get(\"category_coarse\") is None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'reference product': 'Desktop computers',\n",
+       " 'code': 'cg_nodesktoppcs',\n",
+       " 'location': 'CH',\n",
+       " 'amount': 1.0,\n",
+       " 'unit': 'unit',\n",
+       " 'name': 'Desktop computers',\n",
+       " 'worksheet name': 'Sheet1',\n",
+       " 'database': 'CH consumption 1.0',\n",
+       " 'category_coarse': 'Durable goods'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[act for act in co if \"Desktop computers\" in act['name']][0].as_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -30,30 +112,30 @@
    },
    "outputs": [],
    "source": [
-    "list(average_consump.exchanges())"
+    "# list(average_consump.exchanges())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_functional_units = []\n",
-    "for exc in average_consump.exchanges():\n",
-    "    if exc['type'] != 'production':\n",
-    "        list_functional_units.append({exc['input']: exc['amount']})\n",
-    "\n",
     "# list_functional_units = []\n",
-    "# for act in list(co):\n",
-    "#     list_functional_units.append({act: 1})\n",
+    "# for exc in average_consump.exchanges():\n",
+    "#     if exc['type'] != 'production':\n",
+    "#         list_functional_units.append({exc['input']: exc['amount']})\n",
+    "\n",
+    "list_functional_units = []\n",
+    "for act in sectors:\n",
+    "    list_functional_units.append({act: 1})\n",
     "        \n",
     "list_methods = [('IPCC 2013', 'climate change', 'GTP 100a')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.89 s, sys: 167 ms, total: 2.05 s\n",
+      "Wall time: 918 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "myMultiLCA = bw.MultiLCA('av_consump_contribution_analysis')"
@@ -72,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +193,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            kg CO2-Eq  exchanges                   units\n",
+      "Transport sector           409.979029          1  1 month of consumption\n",
+      "Housing, water, electrici  389.615730          1  1 month of consumption\n",
+      "Food and non-alcoholic be  206.095185          1  1 month of consumption\n",
+      "Recreation and culture se  153.272810          1  1 month of consumption\n",
+      "Furnishings, household eq  121.576936          1  1 month of consumption\n",
+      "Durable goods sector       110.239413          1  1 month of consumption\n",
+      "Restaurants and hotels se   87.185604          1  1 month of consumption\n",
+      "Miscellaneous goods and s   71.495445          1  1 month of consumption\n",
+      "Clothing and footwear sec   57.119692          1  1 month of consumption\n",
+      "Health sector               55.609832          1  1 month of consumption\n",
+      "Communication sector        23.933041          1  1 month of consumption\n",
+      "Premiums for life insuran   13.478634          1  1 month of consumption\n",
+      "Other insurance premiums     9.093726          1  1 month of consumption\n",
+      "Fees sector                  8.047178          1  1 month of consumption\n",
+      "Alcoholic beverages and t    5.640879          1  1 month of consumption\n",
+      "Education sector             3.607780          1  1 month of consumption\n"
+     ]
+    }
+   ],
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "    print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1725.9909161295304"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"kg CO2-Eq\"].values.sum()"
    ]
   },
   {
