--- a/rebound.ipynb
+++ b/rebound.ipynb
@@ -13,7 +13,8 @@
     "from pypardiso import spsolve\n",
     "\n",
     "#Local files\n",
-    "from import_databases import *"
+    "from import_databases import *\n",
+    "from utils_exiobase import exiobaseLCA"
    ]
   },
   {
@@ -219,150 +220,6 @@
    "metadata": {},
    "source": [
     "# 3. Compute ecoinvent and agribalyse scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class exiobaseLCA:\n",
-    "\n",
-    "    def __init__(\n",
-    "        self, \n",
-    "        project, \n",
-    "        demand, \n",
-    "        exiobase_scores_precomputed,\n",
-    "        exiobase_name = 'EXIOBASE 2.2',\n",
-    "        ecoinvent_name = 'ecoinvent 3.6 cutoff',\n",
-    "        agribalyse_name = 'Agribalyse 1.3 - ecoinvent 3.6 cutoff',\n",
-    "        ch_consumption_name = 'CH consumption 1.0',\n",
-    "    ):    \n",
-    "        # BW / LCA setup\n",
-    "        self.project = project\n",
-    "        bw.projects.set_current(self.project)\n",
-    "        self.demand = demand\n",
-    "        self.exiobase_scores_precomputed = exiobase_scores_precomputed\n",
-    "        self.methods = list(list(exiobase_scores_precomputed.values())[0].keys())\n",
-    "        self.lca = bw.LCA(self.demand, self.methods[0])\n",
-    "        self.lca.lci()\n",
-    "        self.lca.lcia()\n",
-    "        self.lca.build_demand_array()\n",
-    "        # Database names\n",
-    "        self.exiobase_name = exiobase_name\n",
-    "        self.ecoinvent_name = ecoinvent_name\n",
-    "        self.agribalyse_name = agribalyse_name\n",
-    "        self.ch_consumption_name = ch_consumption_name\n",
-    "        # Find databases indices in matrices\n",
-    "        self.biosphere_without_exiobase, self.d_exiobase_adjusted = self.precompute()\n",
-    "        self.weights = self.compute_exiobase_weights()\n",
-    "        \n",
-    "    def precompute(self):\n",
-    "        ## Precompute whatever possible\n",
-    "        A = self.lca.technosphere_matrix\n",
-    "        # Note that A has a block triangular form (order of databases might be different)\n",
-    "        # [   A_ch        0         0      0\n",
-    "        #   L_ag_ch      A_ag       0      0\n",
-    "        #   L_ec_ch    L_ec_ag     A_ec    0\n",
-    "        #   L_ex_ch       0         0     A_ex ]\n",
-    "\n",
-    "        B = self.lca.biosphere_matrix\n",
-    "        # B in block form\n",
-    "        # [  B_ch  B_ag  B_ec  B_ex ]\n",
-    "\n",
-    "        d = self.lca.demand_array\n",
-    "        # Demand in block form\n",
-    "        # [  d_ch  d_ag  d_ec  d_ex ]\n",
-    "\n",
-    "        # Find indices of activities for each database (where the databases start and end)\n",
-    "        keys_db = [k[0] for k in list(self.lca.activity_dict.keys())]\n",
-    "\n",
-    "        # 1. Exiobase\n",
-    "        db_list = [ind for ind, val in enumerate(keys_db) if val == self.exiobase_name]\n",
-    "        min_ex, max_ex = min(db_list), max(db_list) + 1\n",
-    "        d_exiobas = d[min_ex:max_ex]\n",
-    "        A_exiobas = A[min_ex:max_ex, min_ex:max_ex]\n",
-    "        B_exiobas = B[:, min_ex:max_ex]\n",
-    "\n",
-    "        # 2. Ecoinvent\n",
-    "        db_list = [ind for ind, val in enumerate(keys_db) if val == self.ecoinvent_name]\n",
-    "        min_ec, max_ec = min(db_list), max(db_list) + 1\n",
-    "        d_ecoinve = d[min_ec:max_ec]\n",
-    "        A_ecoinve = A[min_ec:max_ec, min_ec:max_ec]\n",
-    "        B_ecoinve = B[:, min_ec:max_ec]\n",
-    "\n",
-    "        # 3. Agribalyse\n",
-    "        db_list = [ind for ind, val in enumerate(keys_db) if val == self.agribalyse_name]\n",
-    "        min_ag, max_ag = min(db_list), max(db_list) + 1\n",
-    "        d_agribal = d[min_ag:max_ag]\n",
-    "        A_agribal = A[min_ag:max_ag, min_ag:max_ag]\n",
-    "        B_agribal = B[:, min_ag:max_ag]\n",
-    "\n",
-    "        # 4. CH consumption database\n",
-    "        db_list = [ind for ind, val in enumerate(keys_db) if val == self.ch_consumption_name]\n",
-    "        min_ch, max_ch = min(db_list), max(db_list) + 1\n",
-    "        d_consump = d[min_ch:max_ch]\n",
-    "        A_consump = A[min_ch:max_ch, min_ch:max_ch]\n",
-    "        B_consump = B[:, min_ch:max_ch]\n",
-    "\n",
-    "        # 5. L matrices are links between different databases\n",
-    "        L_ag_ch = A[ min_ag:max_ag, min_ch:max_ch ]  # ch_consumption and agribalyse\n",
-    "        L_ec_ch = A[ min_ec:max_ec, min_ch:max_ch ]  # ch_consumption and ecoinvent\n",
-    "        L_ex_ch = A[ min_ex:max_ex, min_ch:max_ch ]  # ch_consumption and exiobase\n",
-    "        L_ec_ag = A[ min_ec:max_ec, min_ag:max_ag ]  # agribalyse and ecoinvent\n",
-    "\n",
-    "        # 6. Solutions of system of linear equations for all databases\n",
-    "        x_consump = spsolve(A_consump, d_consump)\n",
-    "        x_agribal = spsolve(A_agribal, d_agribal - L_ag_ch*x_consump)\n",
-    "        x_ecoinve = spsolve(A_ecoinve, d_ecoinve - L_ec_ch*x_consump - L_ec_ag*x_agribal)\n",
-    "        \n",
-    "        # 7. LCIA score without exiobase\n",
-    "        biosphere_without_exiobase = B_consump*x_consump \\\n",
-    "                                   + B_agribal*x_agribal \\\n",
-    "                                   + B_ecoinve*x_ecoinve\n",
-    "        \n",
-    "        # 8. Adjusted exiobase demand\n",
-    "        d_exiobas_adjusted = d_exiobas - L_ex_ch*x_consump\n",
-    "        \n",
-    "        return biosphere_without_exiobase, d_exiobas_adjusted\n",
-    "\n",
-    "    def compute_exiobase_weights(self):\n",
-    "        reverse_dict = self.lca.reverse_dict()[0]\n",
-    "        act_inds = np.where(self.d_exiobase_adjusted!=0)[0]\n",
-    "        weights = {}\n",
-    "        for act in act_inds:\n",
-    "            bw_act = bw.get_activity(reverse_dict[act]).as_dict()['key']\n",
-    "            weights[bw_act] = self.d_exiobase_adjusted[act]\n",
-    "        return weights\n",
-    "        \n",
-    "    def compute_exiobase_scores(self):\n",
-    "        exiobase_scores = {method: 0 for method in self.methods}\n",
-    "        for key,val in self.weights.items():\n",
-    "            for method in self.methods:\n",
-    "                exiobase_scores[method] += self.exiobase_scores_precomputed[key][method]*val\n",
-    "        return exiobase_scores\n",
-    "    \n",
-    "    def compute_ch_ag_ec_scores(self):\n",
-    "        ch_ag_ec_scores = {}\n",
-    "        for method in self.methods:\n",
-    "            self.lca.switch_method(method)\n",
-    "            self.lca.redo_lcia()\n",
-    "            C = sum(self.lca.characterization_matrix)\n",
-    "            score = C*self.biosphere_without_exiobase\n",
-    "            ch_ag_ec_scores[method] = score[0]\n",
-    "        return ch_ag_ec_scores\n",
-    "    \n",
-    "    def compute_total_scores(self):        \n",
-    "        exiobase_scores = self.compute_exiobase_scores()\n",
-    "        ch_ag_ec_scores = self.compute_ch_ag_ec_scores()\n",
-    "        total_scores = {}\n",
-    "        for method in self.methods:\n",
-    "            total_scores[method] = exiobase_scores[method] + ch_ag_ec_scores[method]\n",
-    "        return total_scores\n",
-    "    \n",
-    "#     def contribution_analysis(self):\n",
-    "        "
    ]
   },
   {
@@ -1371,6 +1228,15 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
